# DMC-MTL-Deploy

./: .gitignore  Readme.md  __init__.py  utils.py
_configs_models/: grape_coldhardiness.yaml  grape_phenology.yaml
_train_configs/dmc_mtl/grape_coldhardiness/: ch_param.yaml
_train_configs/dmc_mtl/phenology/: pheno_param_mtl.yaml
infer/: demo.py  inference_model.py
inference_models/: DMC_Inference.py
inference_models/base/: DMC_Base.py  base.py  process_data.py  util.py
model_engine/: README.md  pyproject.toml
model_engine/model_engine/: __init__.py  engine.py  util.py
model_engine/model_engine/inputs/: __init__.py  input_providers.py  nasapower.py  weather_util.py
model_engine/model_engine/inputs/.weather_data/meteo_cache/: NASAPowerWeatherDataProvider_LAT00380_LON-1210.cache  NASAPowerWeatherDataProvider_LAT00440_LON-0720.cache  NASAPowerWeatherDataProvider_LAT00440_LON-1190.cache  NASAPowerWeatherDataProvider_LAT00440_LON-1230.cache  NASAPowerWeatherDataProvider_LAT00460_LON-1200.cache
model_engine/model_engine/models/: __init__.py  base_model.py  states_rates.py
model_engine/model_engine/models/grape_cold_hardiness/: tensor_batch_grape_cold_hardiness.py
model_engine/model_engine/models/grape_phenology/: tensor_batch_grape_phenology.py
plotters/: plot_results.py  plot_utils.py  plotting_functions.py
results/: compile_runs.py  load_results.py
train_algs/: DMC.py  DMC_Inference.py  __init__.py
train_algs/base/: DMC_Base.py  __init__.py  base.py  process_data.py  util.py
trainers/: inference_model.py  train_model.py
(+376 files in other folders)
