[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "model_engine"
version = "1.0.0"
dependencies = ["traitlets_pcse", "numpy", "pandas", "omegaconf", "torch"]
requires-python = ">=3.11"
authors = [
  {name = "Will Solow", email = "soloww@oregonstate.edu"},
]
maintainers = [
  {name = "Will Solow", email = "soloww@oregonstate.edu"}
]
description = "Model Engine for differentiable models"
readme = "README.md"
license = {file = "LICENSE.md"}
keywords = ["model calibration", "engine"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]


